fix: images don't get too wide

--- a/kyteware-home/src/Controls.css
+++ b/kyteware-home/src/Controls.css
@@ -35,6 +35,15 @@
   min-height: 0;
 }
 
+.controlsInner img {
+  max-width: 100%;
+  max-height: 30%;
+
+  object-fit: contain;
+
+  margin: 0 auto;
+}
+
 .controlButton {
   flex-shrink: 0;
   flex-grow: 0;
